Don't find closed accounts in CSVWizard::findAccounts

Importing into closed account shouldn't occur automatically.
BUG:372786
FIXED-IN:5.0

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>